--- a/start/intro.tex
+++ b/start/intro.tex
@@ -2,4 +2,8 @@
 \pagenumbering{arabic}
 \chapter*{INTRODUCCION}
 
-\textit{Dedicado a nuestras familias, las cuales han sacrificado tiempo para compartir con nosotros, por nuestro saber.}
+{En Colombia, los vendedores ambulantes y tenderos en su afán por competir con los grandes almacenes de cadena como grupo Éxito, Surtimax, Líder etc., han creado sistemas de microcréditos conocidos como "Fiar", en los cuales, se les permite a los consumidores acceder cómodamente a sus productos con un plazo de pago diferido, aumentando así el numero de ventas de sus productos.\\
+
+En la actualidad, este sistema de microcréditos es gestionado de forma informal, en el cual el tendero se apoya en el registro de cada ítem fiado, en una agenda o cuaderno, dando la posibilidad de pérdida de información con el extravió de esta y causando un grado de incertidumbre en el consumidor, en cuanto al pago de cada ítem, ya que el registro solo lo posee el tendero.\\
+
+El objecto de este estudio de investigación, es el diseño un prototipo de plataforma WEB que permita a sus usuarios gestionar microcréditos, no solo entre  los roles de tendero y consumidor, si no también entre el rol de persona natural quien presta dinero a otra, eliminando así los problemas que se derivan de este tipo de actividad económica.}
