--- a/TG.tex
+++ b/TG.tex
@@ -64,7 +64,7 @@
 			\input{description/objectives}
 			
 	\bibliographystyle{alpha}
-	\bibliography{bibliography/article, bibliography/books}
+	\bibliography{bibliography/articles,bibliography/books}
 	
 	\chapter*{ANEXOS}
 	\addcontentsline{toc}{part}{ANEXOS}
