--- a/description/hypothesis.tex
+++ b/description/hypothesis.tex
@@ -1,1 +1,3 @@
 \section{Hipótesis}
+
+{Dado los avances tecnológicos y el gran acogimiento que este ha tenido en la actualidad, el desarrollo de una plataforma web para el transporte y recepción de ítems únicos por región, logrará acortar las barreras regionales entre los usuarios y permitirá el libre flujo mercancía a bajos costos.}
