--- a/start/coverPage.tex
+++ b/start/coverPage.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
 	\begin{center}
-	\textbf{DISEÑO DE UN PROTOTIPO DE PLATAFORMA WEB, QUE PERMITA LA GESTIÓN DE MICROCRÉDITOS ENTRE SUS USUARIOS.}\\
+	\textbf{DESARROLLO DE UN PROTOTIPO DE PLATAFORMA WEB, QUE PERMITA LA GESTIÓN DE MICROCRÉDITOS ENTRE SUS USUARIOS.}\\
 	\vspace{5cm}
 	
 	{WILDER MANUEL ALCALÁ VIZCAINO}\\
