--- a/description/justification.tex
+++ b/description/justification.tex
@@ -1,1 +1,9 @@
 \section{Justificacion}
+
+{En la actualidad, muchas aplicaciones ofrecen servicios de comercio electrónico que satisfacen a la población, con una alta gama de productos y servicios disponibles para la entrega, pero ¿qué pasa cuando estos productos no se pueden conseguir en la ciudad donde los necesitan? Ya sea porque la población de esa ciudad es reacia a consumir estos productos o porque no se fabriquen en dicho lugar. \\
+	
+Existen otros tipos de empresas que transportan productos entre largos trayectos, pero necesitan de una persona, ya sea familiar o un amigo que lo envié, además de pagar un costo más elevado, que el mismo valor del producto a transportar.  \\
+
+En este sentido, se requiere aportar una solución que baje los costos de traslado y acorte distancias entre personas de la misma región, por eso, es muy importante para un bienestar en la población, facilitar el acceso a esos pequeños elementos que por más pequeños que sean, te hacen sentir como en casa. \\
+
+La presente investigación pretende crear un sistema de comunicación entre las personas para transportar suvenires de manera rápida y a bajos costos, esta, busca ayudar a toda la población que requiera de un producto al que no tengan acceso y, a la población que viaja constantemente y necesite ingresos extras. }
