--- a/start/backCover.tex
+++ b/start/backCover.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
 	\begin{center}
-	\textbf{DISEÑO DE UN PROTOTIPO DE PLATAFORMA WEB, QUE PERMITA LA GESTIÓN DE MICROCRÉDITOS ENTRE SUS USUARIOS.}\\
+	\textbf{DESARROLLO DE UN PROTOTIPO DE PLATAFORMA WEB, QUE PERMITA LA GESTIÓN DE MICROCRÉDITOS ENTRE SUS USUARIOS.}\\
 	\vspace{2.5cm}
 	
 	\textbf{AUTORES:}\\
@@ -12,7 +12,7 @@
 	\vspace{2.5cm}
 	
 	\textbf{DIRECTOR:}\\
-	{JULIO BARON VELANDIA}\\
+	{ALEXANDRA ABUCHAR PORRAS}\\
 	\vspace{1cm}
 	
 	\textbf{REVISOR:}\\
