--- a/start/intro.tex
+++ b/start/intro.tex
@@ -6,4 +6,4 @@
 
 En la actualidad, este sistema de microcréditos es gestionado de forma informal, en el cual el tendero se apoya en el registro de cada ítem fiado, en una agenda o cuaderno, dando la posibilidad de pérdida de información con el extravió de esta y causando un grado de incertidumbre en el consumidor, en cuanto al pago de cada ítem, ya que el registro solo lo posee el tendero.\\
 
-El objecto de este estudio de investigación, es el diseño un prototipo de plataforma WEB que permita a sus usuarios gestionar microcréditos, no solo entre  los roles de tendero y consumidor, si no también entre el rol de persona natural quien presta dinero a otra, eliminando así los problemas que se derivan de este tipo de actividad económica.}
+El objecto de este estudio de investigación, es el desarrollo de un prototipo de plataforma WEB que permita a sus usuarios gestionar microcréditos, no solo entre  los roles de tendero y consumidor, si no también entre el rol de persona natural quien presta dinero a otra, eliminando así los problemas que se derivan de este tipo de actividad económica.}
