--- a/bibliography/articles.bib
+++ b/bibliography/articles.bib
@@ -3,17 +3,25 @@
 	@article{unemployment,
 		author = {Camilo Vega Barbosa},
 		title = {¿Por qué está subiendo el desempleo en Colombia?},
-		date = {01/10/2019},
+		year = {2019},
 		publisher = {El Espectador},
-		url = {https://www.elespectador.com/economia/por-que-esta-subiendo-el-desempleo-en-colombia-articulo-883869}
+		note = { Disponible en \url{https://www.elespectador.com/economia/por-que-esta-subiendo-el-desempleo-en-colombia-articulo-883869} [Visto el 25/09/2019]}
 	}
 
 	@article{dane,
 		author = {Dane},
 		title = {Gran encuesta integrada de hogares (GEIH) Mercado laboral},
-		year = {30/09/2019},
+		year = {2019},
 		publisher = {DANE},
-		url = {https://www.dane.gov.co/index.php/estadisticas-por-tema/mercado-laboral/empleo-y-desempleo}
+		note = {Disponible en \url{https://www.dane.gov.co/index.php/estadisticas-por-tema/mercado-laboral/empleo-y-desempleo} [Visto el 25/09/2019]}
+	}
+
+	@article{bankrep,
+		author = {Andrés Murcia Pabón},
+		title = {Determinantes del acceso al crédito de los hogares colombianos},
+		year = {2007},
+		publisher = {Banco de la República},
+		note = {Disponible en \url{http://repositorio.banrep.gov.co/bitstream/handle/20.500.12134/5467/be_449.pdf?sequence=1&isAllowed=y} [Visto el 25/09/2019]}
 	}
 
 ]
