--- a/description/justification.tex
+++ b/description/justification.tex
@@ -1,9 +1,27 @@
 \section{Justificacion}
 
-{En la actualidad, muchas aplicaciones ofrecen servicios de comercio electrónico que satisfacen a la población, con una alta gama de productos y servicios disponibles para la entrega, pero ¿qué pasa cuando estos productos no se pueden conseguir en la ciudad donde los necesitan? Ya sea porque la población de esa ciudad es reacia a consumir estos productos o porque no se fabriquen en dicho lugar. \\
+{La inclusión de herramientas tecnológicas en el sector comercial para la venta de sus productos, se ha convertido en referente para el aumento de estas, si bien almacenes de cadena como Exito, Alkosto, Metro etc, han implementado sitios WEB para el comercio electrónico de sus productos, que podrán pagar a crédito según el tiempo acordado con el sitio.  Los vendedores informales y tenderos, frente a este tipo de práctica no tienen cómo competir, ya que precisamente la informalidad y la pequeña infraestructura que suelen tener las tiendas, dificulta acceder a un sitio propio y hace inviable la sostenibilidad de este, por eso, a modo de competencia, los tenderos han recurrido al uso de estrategias de ventas para percibir nuevos ingresos como lo es “fiar”, aumentando la posibilidad de ventas ya que los consumidores se animan a comprar \cite{creditArtJos}, y adicionalmente la clientela objetivo, pasa de ser únicamente cliente en efectivo a ser cliente en efectivo y crédito.\\
 	
-Existen otros tipos de empresas que transportan productos entre largos trayectos, pero necesitan de una persona, ya sea familiar o un amigo que lo envié, además de pagar un costo más elevado, que el mismo valor del producto a transportar.  \\
+El uso de esta estrategia, es aún rústica (hecha  a mano con registro en agendas o cuadernos) y a veces, entorpecida por el bajo nivel educativo en el que se encuentran incluidos algunos de sus usuarios, pues el cálculo de los pagos que deben recibir son errados, por tal motivo, se encuentra la necesidad de desarrollar una plataforma WEB que permita a sus usuarios realizar este tipo de práctica, realizando de manera automatizada el cálculo de las cuotas y entregando los siguientes beneficios:
 
-En este sentido, se requiere aportar una solución que baje los costos de traslado y acorte distancias entre personas de la misma región, por eso, es muy importante para un bienestar en la población, facilitar el acceso a esos pequeños elementos que por más pequeños que sean, te hacen sentir como en casa. \\
+\begin{itemize}
+	
+	\item Al tendero.
+	\begin{itemize}
+		\item Facilitar el acceso de sus clientes a sus productos.
+		\item Ver en tiempo real estado (pago o no pago) de los microcréditos otorgados a sus clientes.
+		\item Visualizar los ingresos derivados del microcrédito.
+		\item Percibir ingresos adicionales, gracias a los intereses obtenidos del microcrédito.
+		\item Brindar confianza a sus clientes en cuanto al cobro de sus productos gracias a los cálculos automatizados.
+	\end{itemize}
 
-La presente investigación pretende crear un sistema de comunicación entre las personas para transportar suvenires de manera rápida y a bajos costos, esta, busca ayudar a toda la población que requiera de un producto al que no tengan acceso y, a la población que viaja constantemente y necesite ingresos extras. }
+	\item Al consumidor.
+	\begin{itemize}
+		\item Tener de manera organizada las deudas acumuladas.
+		\item Visualizar en tiempo real estado (pago o no pago) de los microcréditos obtenidos.
+		\item Limitar el acceso desmesurado a microcréditos, protegiendo su capacidad de pago.
+	\end{itemize}
+
+\end{itemize}
+
+Adicionalmente, vale la pena destacar, que este desarrollo les permitirá a las personas del común gestionar microcréditos (préstamo) con sus conocidos, eliminando la posibilidad de que las deudas queden en el olvido y brindándole una herramienta que le recuerde el cobro de sus obligaciones.}
