--- a/description/objectives.tex
+++ b/description/objectives.tex
@@ -1,5 +1,4 @@
 \section{Objetivos}
-
 	\subsection{Objetivo general}
 	
 	{Desarrollar un prototipo de plataforma WEB, que permita la gestión de microcréditos entre sus usuarios, con el fin de facilitar el cálculo y visualización de estos en una interfaz amigable.}
@@ -7,10 +6,9 @@
 	\subsection{Objetivos específicos}
 	
 	\begin{itemize}
-		\renewcommand{\labelitemi}{$\bullet$}
-		\item Aumentar las ventas de los tenderos en un 10\% al basar su sistema de microcréditos en la plataforma WEB.
-		\item Eliminar la incertidumbre del cliente con respecto a los microcréditos obtenidos ante el tendero.
-		\item Reducir el uso desmesurado de microcréditos por parte del consumidor, con la limitación de estos, para un mejor manejo de sus finanzas.
+		\item Aumentar el numero de ventas de los tenderos al basar su sistema de pagos en los microcréditos de la plataforma WEB.
+		\item Eliminar la incertidumbre del usuario con respecto a los microcréditos obtenidos.
+		\item Reducir el uso desmesurado de microcréditos por parte del usuario, con la limitación de estos, para un mejor manejo de sus finanzas.
 	\end{itemize}
 	
 	
