--- a/description/problem.tex
+++ b/description/problem.tex
@@ -2,21 +2,22 @@
 
 	\subsection{Planteamiento del Problema}
 	
-	{Las entidades bancarias en Colombia, son los entes principales en gestionar créditos para sus clientes, estas se encargan de ofrecer créditos según el perfil de la persona interesada, tomando en cuenta, sus ingresos, la capacidad de endeudamiento y los reportes en las centrales de riesgo, limitando así, el acceso de personas con ingresos bajos y sin vida crediticia, a este tipo de beneficio. Incluso, en algunos casos, el monto del crédito requerido por el usuario es tan bajo, que no amerita el tramite necesario para acceder a él, obligando a la persona a afrontar necesidades básicas las cuales no puede suplir en el momento.\\
+	{Las entidades bancarias en Colombia, son los entes principales en gestionar créditos para sus clientes, estas se encargan de ofrecer créditos según el perfil de la persona interesada, tomando en cuenta, sus ingresos, la capacidad de endeudamiento y los reportes en las centrales de riesgo, limitando así, el acceso de personas con ingresos bajos y sin vida crediticia, a este tipo de beneficio \cite{bankrep}. Incluso, en algunos casos, el monto del crédito requerido por el usuario es tan bajo, que no amerita el tramite necesario para acceder a él, obligando a la persona a afrontar necesidades básicas las cuales no puede suplir en el momento.\\
 		
 	A esto se le suma, el aumento de la tasa desempleo que para este año según cifras DANE va en un 10,8\%, aumentando un 1,6\% con respecto al año pasado que estaba en un 9.2\% \cite{dane}, esto gracias, al alto crecimiento de la población \cite{unemployment}, si bien la crisis económica del vecino país Venezuela, ha obligado a gran parte de sus habitantes a migrar hacia Colombia, estos por la falta de empleo y necesidad,  ofrecen sus servicios profesionales a menores rangos salariales,  influyendo en la estabilidad y el bolsillo de los colombianos.\\
 	
-	Frente a esta problemática y las necesidades expuestas, un grupo de personas que trabajan en la informalidad, como vendedores ambulantes e incluso tenderos, buscando subsanar el alto índice de intereses cobrado por las entidades bancarias, ofrecen sus productos a clientes de confianza con módicas cuotas de pago, facilitándoles el acceso a recursos básicos de bajo costo, los cuales, una entidad financiera normalmente no financiaría, dicho procedimiento es conocido como “fiar”, en otros términos, ofrecer un microcrédito, donde el tendero usualmente toma registro de cada ítem fiado en una agenda o cuaderno, permitiendo fácilmente la manipulación, ingreso errado (malos cálculos) y la perdida, de la información, pues el registro estará supeditado al tendero, conllevando a un alto grado de incertidumbre en el cliente representado en molestar.}
+	Frente a esta problemática y las necesidades expuestas, un grupo de personas que trabajan en la informalidad, como vendedores ambulantes e incluso tenderos, buscando subsanar el alto índice de intereses cobrado por las entidades bancarias, ofrecen sus productos a clientes de confianza con módicas cuotas de pago, facilitándoles el acceso a recursos básicos de bajo costo, los cuales, una entidad financiera normalmente no financiaría, dicho procedimiento es conocido como “fiar”, en otros términos, ofrecer un microcrédito, donde el tendero usualmente toma registro de cada ítem fiado en una agenda o cuaderno, permitiendo fácilmente la manipulación, ingreso errado (malos cálculos) y la perdida, de la información, pues el registro estará supeditado al tendero, conllevando a un alto grado de incertidumbre en el cliente representado en molestar.\\
+
+	Por otro lado, también existe una problemática relacionada en cuanto a préstamos entre conocidos se refiere, pues algunas personas son amantes de las apuestas y a veces se ven envueltos en deudas con sus conocidos por estas, o por causas de fuerza mayor que los obligan a pedir un préstamo de dinero, y es allí donde se presenta la falencia, pues al ser un proceso irrelevante para ellos (por ser de confianza), no toman registro de la transacción o hacen una simple anotación en cuadernos, celulares, agendas etc, permitiendo que la transacción quede en el olvido o se pierda.}
 
 	\subsection{Formulación del problema}
 	
-	{Con base a la problemática anterior expuesta, surge la siguiente pregunta de investigación ¿Cómo facilitar el registro de microcréditos entre el tendero y consumidor por medio de una plataforma WEB?.}
+	{Con base a la problemática anterior expuesta, surge la siguiente pregunta de investigación ¿Cómo facilitar la gestión de microcréditos entre el tendero, consumidor o personas naturales por medio de una plataforma WEB?.}
 	
 	\subsection{Sistematización del problema}
 	
-	{¿Bajo qué fórmulas se rigen las entidades financieras para el cálculo de cuotas, en caso de un cliente pagar a plazos?.\\
+	{¿Bajo qué fórmulas se rigen las entidades financieras para el cálculo de cuotas, en caso de un usuario pagar a plazos?.\\
 		
 	¿Cómo permitir el fácil acceso a la información de los microcréditos obtenidos por él consumidor, ante él tendero?.\\
 	
-	¿Cómo conservar indefinidamente la información de los microcréditos, sin que esta se pierda por manipulación del tendero?.\\
-	}
+	¿Cómo conservar indefinidamente la información de los microcréditos, sin que esta se pierda por manipulación del usuario?.}
