--- a/description/scopes.tex
+++ b/description/scopes.tex
@@ -1,1 +1,18 @@
 \section{Alcances y limitaciones}
+
+	\subsection{Alcances}
+	\begin{itemize}
+		
+		\item El desarrollo de la plataforma Web, será un prototipo regido bajo un ambiente controlado de pruebas que proveerá el mini factibilidad del producto.
+		\item El cálculo de los pagos que deben realizar los usuarios, estará basado en las fórmulas de cuotas fijas utilizadas en las entidades financieras, todo esto con el fin de garantizar un sistema confiable y sin margen de error.
+		
+	\end{itemize}
+	
+	\subsection{Limitaciones}
+	\begin{itemize}
+		
+		\item La plataforma web sólo brindará soporte en escritorio y no nativamente en móvil, ya que no se posee el conocimiento adecuado para este tipo de desarrollo.
+		
+		\item Inicialmente la plataforma solo permitirá el pago en efectivo (emulando el método de pago de las personas que usualmente fían), no tendrá un pago digital, debido a los costos adicionales que acarrearía el proyecto por este tipo de pago.
+		
+	\end{itemize}
