--- a/start/backCover.tex
+++ b/start/backCover.tex
@@ -11,7 +11,7 @@
 	{PROYECTO DE GRADO PRESENTADO PARA OPTAR POR EL TÍTULO DE ESPECIALISTA EN INGENIERÍA DE SOFTWARE.}\\
 	\vspace{2.5cm}
 	
-	\textbf{DIRECTOR:}\\
+	\textbf{DIRECTORA:}\\
 	{ALEXANDRA ABUCHAR PORRAS}\\
 	\vspace{1cm}
 	
