--- a/start/intro.tex
+++ b/start/intro.tex
@@ -1,6 +1,6 @@
 \addcontentsline{toc}{part}{INTRODUCCION}
 \pagenumbering{arabic}
-\chapter*{INTRODUCCION}
+\chapter*{INTRODUCCIÓN}
 
 {En Colombia, los vendedores ambulantes y tenderos en su afán por competir con los grandes almacenes de cadena como grupo Éxito, Surtimax, Líder etc., han creado sistemas de microcréditos conocidos como "Fiar", en los cuales, se les permite a los consumidores acceder cómodamente a sus productos con un plazo de pago diferido, aumentando así el numero de ventas de sus productos.\\
 
