--- a/description/problem.tex
+++ b/description/problem.tex
@@ -16,8 +16,8 @@
 	
 	\subsection{Sistematización del problema}
 	
-	{¿Bajo qué fórmulas se rigen las entidades financieras para el cálculo de cuotas, en caso de un usuario pagar a plazos?.\\
-		
-	¿Cómo permitir el fácil acceso a la información de los microcréditos obtenidos por él consumidor, ante él tendero?.\\
-	
-	¿Cómo conservar indefinidamente la información de los microcréditos, sin que esta se pierda por manipulación del usuario?.}
+	\begin{itemize}
+		\item ¿Bajo qué fórmulas se rigen las entidades financieras para el cálculo de cuotas, en caso de un usuario pagar a plazos?.
+		\item ¿Cómo permitir el fácil acceso a la información de los microcréditos obtenidos por él consumidor, ante él tendero?.
+		\item ¿Cómo conservar indefinidamente la información de los microcréditos, sin que esta se pierda por manipulación del usuario?.
+	\end{itemize}
