marco teorico finish

--- a/bibliography/articles.bib
+++ b/bibliography/articles.bib
@@ -24,4 +24,37 @@
 		note = {Disponible en \url{http://repositorio.banrep.gov.co/bitstream/handle/20.500.12134/5467/be_449.pdf?sequence=1&isAllowed=y} [Visto el 25/09/2019]}
 	}
 
+	@article{MaricruzMicro,
+		author = {Maricruz Lacalle Calderón},
+		title = {Los microcréditos: un nuevo instrumento de financiación para luchar contra la pobreza},
+		year = {2001},
+		publisher = {Universidad Alfonso X el Sabio},
+		note = {Disponible en \url{http://sem-wes.org/sites/default/files/revistas/rem5_7_0.pdf} [Visto el 19/10/2019]}
+	}
+
+	@article{BarbaraMicro,
+		author = {Bárbara Mena},
+		title = {Microcréditos: un medio efectivo para el alivio de la pobreza},
+		year = {2003},
+		publisher = {BIBLIOTECA DIGITAL MUNICIPAL},
+		note = {Disponible en \url{http://biblioteca.municipios.unq.edu.ar/modules/mislibros/archivos/Microfinanzas%20en%20Argentina.pdf} [Visto el 19/10/2019]}
+	}
+
+	@article{LupeTrust,
+		author = {Lupe Mouthón},
+		title = {El fiao: el as que salva a las tiendas},
+		year = {2019},
+		publisher = {EL HERALDO},
+		note = {Disponible en \url{https://www.elheraldo.co/economia/el-fiao-el-que-salva-las-tiendas-653295} [Visto el 19/10/2019]}
+	}
+
+	@article{YusefUX,
+		author = {Yusef Hassan Montero},
+		title = {Experiencia de usuario: principios y metodos},
+		year = {2015},
+		publisher = {Yusef},
+		note = {Disponible en \url{https://yusef.es/Experiencia_de_Usuario.pdf} [Visto el 19/10/2019]}
+	}
+
+
 ]
