--- a/bibliography/books.bib
+++ b/bibliography/books.bib
@@ -4,6 +4,13 @@
 		title = {Crédito y Cobranza},
 		year = {2014},
 		edition = 1,
-		publisher = {GRUPO EDITORIAL PATRIA},
+		publisher = {GRUPO EDITORIAL PATRIA},
+	}
+
+	@book{angelData,
+		author = {Angel Cobo Yera},
+		title = {Diseño y programación de bases de datos},
+		year = {2007},	
+		publisher = {VISION LIBROS},
 	}
 ]
