--- a/TG.tex
+++ b/TG.tex
@@ -8,6 +8,7 @@
 \usepackage[fixlanguage]{babelbib}
 \selectbiblanguage{spanish}
 \usepackage{url}
+\usepackage{float}
 %-----------------------------
 
 \title{Trust Me}
@@ -33,6 +34,8 @@
 	
 	%--------------------TABLES
 	\tableofcontents
+	\listoffigures
+	\listoftables
 	
 	%-----------------CONTENT
 	\include{start/intro}
