--- a/description/framework.tex
+++ b/description/framework.tex
@@ -2,26 +2,72 @@
 
 	\subsection{Marco teórico}
 	
+		\subsubsection{Microcrédito}
+		
+		{Es una fuente de financiación enfocada a los hogares con bajos ingresos, esta, trata de proveer pequeños prestamos impulsando el desarrollo económico de los interesados, permitiendo la adquisición de activos o bienes de bajo costo, es basada en la hipótesis de "para bajar los índices de pobreza es indispensable dar acceso a los recursos financieros" \cite{MaricruzMicro,BarbaraMicro}.\\
+		
+		El microcrédito, es imprecindible como fuente de financiación para las personas que se encargan a las ventas informales, este permite que sus clientes tengan acceso a sus productos, incrementar el porcentaje de sus ventas y fidelizar a los mismos \cite{LupeTrust}.\\
+	
+		\begin{figure}[H]
+			\centering
+			\includegraphics[width=0.8\linewidth]{description/framework/tendero.jpg}
+			\caption{Tendero fiando}
+		\end{figure}
+		}
+	
+	
+		\subsubsection{Experiencia de usuario}
+		
+		{La experiencia de usuario hace referencia a la visión o al diseño en la que el proceso o interactividad de la aplicación, está delimitada o conducida empíricamente por la información recopilada de la audiencia objetivo del producto, esto con el fin de garantizar una navegabilidad fluida entre cada uno de sus usuarios, para esto, es necesario tener en cuenta la “interacción”, previsualizando las opciones de las que dispondrá el usuario y como deberá responder la aplicación a cada una de sus acciones \cite{YusefUX}.\\
+		
+		La interacción, es divisible en 3 etapas:
+		
+		\begin{itemize}
+			\item \textbf{Formulación del objetivo:} ¿Que quiere lograr el usuario?
+			\item \textbf{Ejecución:} ¿Qué hace?
+			\item \textbf{Evaluación:} El usuario compara lo que ocurrió, con que quería que ocurriera.
+		\end{itemize}
+		
+		\begin{figure}[H]
+			\centering
+			\includegraphics[width=0.8\linewidth]{description/framework/interactividad.jpg}
+			\caption{Interactividad}
+		\end{figure}
+		}
+	
+		\subsubsection{Almacenamiento y persistencia de la información}
+		
+		{Los desarrollos tecnológicos en la informática y en la electrónica, han permitido que el almacenamiento de la información, pase de ser físico a digital, utilizando herramientas de almacenamiento en la nube para su posterior uso, conocidos como bases de datos, esto, facilitando la obtención de datos inmediatamente cuando son requeridos y garantizando el acceso a ellos.\\
+			
+		Las bases de datos, son un conjunto de datos almacenados en un medio informático que puede ser accedido por varios usuarios o aplicaciones a la vez, teniendo en cuenta como premisa, que estos no pueden ser redundantes e innecesarios.  \cite{angelData}.\\
+		
+		\begin{figure}[H]
+			\centering
+			\includegraphics[width=0.8\linewidth]{description/framework/nube.jpg}
+			\caption{Almacenamiento en la nube}
+		\end{figure}
+	}
+		
+	
+	\subsection{Marco Conceptual}
+	
 		\subsubsection{Sitios Web}
 		
-		{Un sitio web es un conjunto de archivos electrónicos y páginas web referentes a un tema en particular, incluyendo una página inicial de bienvenida generalmente denominada home page, a los cuales se puede acceder a través de un nombre de dominio y dirección en Internet específicos. El World Wide Web, o simplemente Web como se le llama comúnmente, está integrado por sitios web y éstos a su vez por páginas web. La gente suele confundir estos términos, pero un sitio web es en realidad un conjunto de páginas web .\\
+		{Un sitio web es un conjunto de archivos electrónicos y páginas web referentes a un tema en particular, incluyendo una página inicial de bienvenida generalmente denominada home page, a los cuales se puede acceder a través de un nombre de dominio y dirección en Internet específicos. El World Wide Web, o simplemente Web como se le llama comúnmente, está integrado por sitios web y éstos a su vez por páginas web. La gente suele confundir estos términos, pero un sitio web es en realidad un conjunto de páginas web.\\
 			
 		Los sitios web son empleados por las instituciones públicas y privadas, organizaciones e individuos para comunicarse con el mundo entero. En el caso particular de las empresas, este mensaje tiene que ver con la oferta de sus bienes y servicios a través de Internet, y en general para hacer eficiente sus funciones de mercadotecnia.}
-	
-	
+		
+		
 		\subsubsection{Diseño Web responsivo}
 		
 		{El diseño web responsive o adaptativo es una técnica de diseño web que busca la correcta visualización de una misma página en distintos dispositivos. Desde ordenadores de escritorio a tablets y móviles, en otras palabras, se trata de redimensionar y colocar los elementos de la web de forma que se adapten al ancho de cada dispositivo permitiendo una correcta visualización y una mejor experiencia de usuario. Se caracteriza porque los layouts (contenidos) e imágenes son fluidos y se usa código media-queries de CSS3.\\
 			
 		El diseño responsive permite reducir el tiempo de desarrollo, evita los contenidos duplicados, y aumenta la viralidad de los contenidos ya que permite compartirlos de una forma mucho más rápida y natural.}
 	
-	
+		
 		\subsubsection{Bases de datos relaciones}
 		
 		{Una base de datos relacional consiste en un conjunto de tablas, a cada una de las cuales se le asigna un nombre exclusivo, cada fila de la tabla representa una relación entre un conjunto de valores. De manera informal, cada tabla es un conjunto de entidades, y cada fila es una entidad, dado que cada tabla es un conjunto de tales relaciones, hay una fuerte correspondencia entre el concepto de tabla y el concepto matemático de relación, del que toma su nombre el modelo de datos relacional.}
-		
-	
-	\subsection{Marco Conceptual}
 	
 		\subsubsection{SQL}
 		
@@ -39,7 +85,7 @@
 		REST define un set de principios arquitectónicos por los cuales se diseñan servicios web haciendo foco en los recursos del sistema, incluyendo cómo se accede al estado de dichos recursos y cómo se transfieren por HTTP hacia clientes escritos en diversos lenguajes. REST emergió en los últimos años como el modelo predominante para el diseño de servicios. De hecho, REST logró un impacto tan grande en la web que prácticamente logró desplazar a SOAP y las interfaces basadas en WSDL por tener un estilo bastante más simple de usar.}
 	
 	
-		\subsubsection{Web api}
+		\subsubsection{Web API}
 		
 		{Es un marco que facilita la creación de servicios HTTP disponibles para una amplia variedad de clientes, entre los que se incluyen exploradores y dispositivos móviles. ASP.NET Web API es la plataforma perfecta para crear aplicaciones RESTful en .NET Framework.}
 		
